<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBw_8k0qiZbmFbtgOSkBwefg5SFQsoLBZQ</string>
    <string name="app_name">TattHood</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="create_your_password">Create your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="homeOne">HomeOne</string>
    <string name="homeTwo">HomeTwo</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_settings">Profile settings</string>
    <string name="pending_actions">Pending actions</string>
    <string name="active_users">active users</string>
    <string name="share_picture">share picture</string>
    <string name="already_an_account_log_in">Already an account ? Log in.</string>
    <string name="or_create_a_new_account">Or create a new account</string>
    <string name="choose_your_username">choose your username</string>
    <string name="hello_picture">Hello picture</string>
    <string name="hello_message">hello message</string>
    <string name="hello_picture_fragment">hello_picture_fragment</string>
    <string name="hello_profile">hello profile</string>
    <string name="tatthood">TattHood</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="logout">logout</string>
    <string name="todo">TODO</string>
    <string name="hone_icon">hone_icon</string>
    <string name="icon_link_to_dashboard">icon_link_to_dashboard</string>
    <string name="logout_app">logout_app</string>
    <string name="icon_link_about">icon_link_about</string>
    <string name="hello_market">Hello market</string>
    <string name="gallery">Gallery</string>
    <string name="notification">notification</string>
    <string name="market">market</string>
    <string name="search">Search...</string>
    <string name="post">POST</string>
    <string name="likes">likes</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string-array name="users_status">
        <item>Choose a status...</item>
        <item>Artist</item>
        <item>Tattoo Shop</item>
        <item>Collector</item>
        <item>Skin virgin</item>
        <item>Adviser</item>
    </string-array>
    <string-array name="tatoo_category">
        <item>Choose a category...</item>
        <item>abdomen</item>
        <item>abstract</item>
        <item>african</item>
        <item>alien</item>
        <item>anchor</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_id">d0f79f3a91fc1f95</string>

</resources>