<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Profile">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="2dp"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/toolbar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:text="Toolbar name"
                android:textStyle="bold"
                android:textColor="@color/black"
              />
            <ImageView
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="new post"
                android:src="@drawable/ic_menu" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

  <LinearLayout
      android:id="@+id/linear_1"
      android:layout_below="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <de.hdodenhof.circleimageview.CircleImageView
          android:layout_width="120dp"
          android:layout_height="120dp"
          android:id="@+id/image_profile"
          app:civ_border_color="#76D1FA"
          app:civ_border_width="1dp"
          android:src="@mipmap/ic_launcher"
          android:layout_margin="16dp"/>

  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_gravity="start"
            android:id="@+id/username"
            android:padding="4dp"
            android:text="Username"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textSize="18sp"
            android:padding="4dp"
            android:layout_gravity="start"
            android:id="@+id/user_status"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="4dp"
            android:id="@+id/user_bio"
            android:text="Love to travel around the world"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="14sp"
            android:id="@+id/edit_profile"
            android:layout_gravity="start"
            android:textColor="@color/PrimaryDark"
            android:text="Edit profile"/>

    </LinearLayout>

  </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/combined_layout"
        android:layout_below="@id/linear_1">

    <LinearLayout
        android:id="@+id/countLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="250M"
                android:id="@+id/followingCount"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/following"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/followersCount"
                android:text="500M"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/followers"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/postCount"
                android:text="1B"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/posts"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_follow">

    </RelativeLayout>

</RelativeLayout>
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayoutProfile"
        android:background="@android:color/transparent"
        android:layout_below="@+id/combined_layout"
        app:tabIndicatorHeight="3dp"
        app:tabMode="fixed"
        app:tabPaddingBottom="8dp"
        android:paddingTop="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2ACC11"
        android:id="@+id/view"
        android:layout_below="@id/tabLayoutProfile"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view"/>


</RelativeLayout>